--- a/assets/base.css
+++ b/assets/base.css
@@ -2321,7 +2321,8 @@ product-info .loading-overlay:not(.hidden) ~ *,
 .header {
   display: grid;
   grid-template-areas: 'left-icons heading icons';
-  grid-template-columns: 1fr 2fr 1fr;
+  /* grid-template-columns: 1fr 2fr 1fr; */
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
 }
 
@@ -2474,9 +2475,15 @@ product-info .loading-overlay:not(.hidden) ~ *,
 
 /* Header icons */
 .header__icons {
-  display: flex;
+  display: none;
   grid-area: icons;
   justify-self: end;
+}
+
+@media screen and (min-width: 990px) {
+  .header__icons {
+    display: flex;
+  }
 }
 
 .header__icons .shopify-app-block {
@@ -2527,6 +2534,8 @@ product-info .loading-overlay:not(.hidden) ~ *,
   position: relative;
   margin-right: -1.2rem;
 }
+
+
 
 .header__icon--menu[aria-expanded="true"]::before {
   content: "";
@@ -3186,8 +3195,11 @@ details-disclosure > details {
   border-radius: 1.5rem;
 }
 
-.list-menu__item[href="/pages/contact"] {
-  background-color: rgba(var(--color-button), var(--alpha-button-background));
-  color: #fff;
-  border-radius: 1rem;
+@media screen and (min-width: 990px) {
+  .list-menu__item[href="/pages/contact"] {
+    background-color: rgba(var(--color-button), var(--alpha-button-background));
+    color: #fff;
+    border-radius: 1rem;
+  }
 }
+
