--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -83,9 +83,15 @@
   height: 100%;
   justify-content: center;
   align-self: center;
-  padding: 4rem calc(4rem / var(--font-body-scale)) 5rem;
+  padding: 4rem calc(1rem / var(--font-body-scale)) 2rem;
   position: relative;
   z-index: 1;
+}
+
+@media screen and (min-width: 750px) {
+  .image-with-text__content {
+    padding: 4rem calc(4rem / var(--font-body-scale)) 5rem;
+  }
 }
 
 .image-with-text .grid__item::after {
@@ -331,6 +337,9 @@
 }
 
 @media screen and (max-width: 749px) {
+  .image-with-text__heading {
+    font-size: 1.8rem;
+  }
   .collapse-padding .image-with-text__grid .image-with-text__content {
     padding-left: 0;
     padding-right: 0;
