--- a/sections/custom-tabs.liquid
+++ b/sections/custom-tabs.liquid
@@ -1,3 +1,4 @@
+{{ 'component-slider.css' | asset_url | stylesheet_tag }}
 
 {%- style -%}
   .section-{{ section.id }}-padding {
@@ -14,16 +15,16 @@
 {%- endstyle -%}
 
 <style>
-  .tab {
+  #shopify-section-{{ section.id }} .tab {
     display: none;
   }
-  .tab-label {
+  #shopify-section-{{ section.id }} .tab-label {
     cursor: pointer;
-    padding: 10px 20px;
+    padding: 10px;
     border-bottom: none;
     display: inline-block;
   }
-  .tab-content {
+  #shopify-section-{{ section.id }} .tab-content {
     display: none;
     padding: 20px;
     border: 1px solid #ccc;
@@ -42,12 +43,25 @@
     border-bottom: 3px solid;
   }
 
-  #tab1:checked ~ #content1,
-  #tab2:checked ~ #content2,
-  #tab3:checked ~ #content3,
-  #tab4:checked ~ #content4,
-  #tab5:checked ~ #content5 {
+  [data-tab="tab1"] > #content1,
+  [data-tab="tab2"] > #content2,
+  [data-tab="tab3"] > #content3,
+  [data-tab="tab4"] > #content4,
+  [data-tab="tab5"] > #content5 {
     display: block;
+  }
+
+  #shopify-section-{{ section.id }} .tab-item {
+    width: auto;
+    white-space: nowrap;
+    margin: 0;
+    min-width: auto;
+  }
+
+  @media screen and (min-width: 750px) {
+    #shopify-section-{{ section.id }} .tab-label {
+      padding: 1rem 2rem;
+    }
   }
 </style>
 <div class="color-{{ section.settings.color_scheme }} gradient">
@@ -64,8 +78,41 @@
         {{ section.settings.sub_heading }}
       </div>
 
+      <slider-component class="slider-mobile-gutter">
+        <ul
+          class="multicolumn-list contains-content-container grid grid--{{ section.settings.columns_mobile }}-col-tablet-down grid--{{ section.settings.columns_desktop }}-col-desktop slider slider--mobile grid--peek"
+          id="Slider-{{ section.id }}"
+          role="list"
+        >
+          <li id="Slide-{{ section.id }}-0" class="tab-item grid__item article slider__slide slider__slide--full-width">
+            <input type="radio" id="tab1" name="tab" checked>
+            <label for="tab1" class="tab-label">Media Buying</label>
+          </li>
+          
+          <li id="Slide-{{ section.id }}-1" class="tab-item grid__item article slider__slide slider__slide--full-width">
+            <input type="radio" id="tab2" name="tab">
+            <label for="tab2" class="tab-label">Paid Media Strategy</label>
+          </li>
+          
+          <li id="Slide-{{ section.id }}-2" class="tab-item grid__item article slider__slide slider__slide--full-width">
+            <input type="radio" id="tab3" name="tab">
+            <label for="tab3" class="tab-label">Creative Strategy</label>
+          </li>
+          
+          <li id="Slide-{{ section.id }}-3" class="tab-item grid__item article slider__slide slider__slide--full-width">
+            <input type="radio" id="tab4" name="tab">
+            <label for="tab4" class="tab-label">Data Analysis</label>
+          </li>
+          
+          <li id="Slide-{{ section.id }}-4" class="tab-item grid__item article slider__slide slider__slide--full-width">
+            <input type="radio" id="tab5" name="tab">
+            <label for="tab5" class="tab-label">Reporting</label>
+          </li>
+        </ul>
+      </slider-component>
+
       <div class="text-center">
-        <input type="radio" id="tab1" name="tab" checked>
+        {% comment %} <input type="radio" id="tab1" name="tab" checked>
         <label for="tab1" class="tab-label">Media Buying</label>
 
         <input type="radio" id="tab2" name="tab">
@@ -80,31 +127,45 @@
         <input type="radio" id="tab5" name="tab">
         <label for="tab5" class="tab-label">Reporting</label>
 
-        
-        <div id="content1" class="tab-content">
-          {% render 'tab-content-1' %}
-        </div>
-
-        <div id="content2" class="tab-content">
-          {% render 'tab-content-2' %}
-        </div>
-
-        <div id="content3" class="tab-content">
-          {% render 'tab-content-3' %}
-        </div>
-        
-        <div id="content4" class="tab-content">
-          {% render 'tab-content-4' %}
-        </div>
-
-        <div id="content5" class="tab-content">
-          {% render 'tab-content-5' %}
+         {% endcomment %}
+        <div id="tabContent" data-tab="tab1">
+          <div id="content1" class="tab-content">
+            {% render 'tab-content-1' %}
+          </div>
+  
+          <div id="content2" class="tab-content">
+            {% render 'tab-content-2' %}
+          </div>
+  
+          <div id="content3" class="tab-content">
+            {% render 'tab-content-3' %}
+          </div>
+          
+          <div id="content4" class="tab-content">
+            {% render 'tab-content-4' %}
+          </div>
+  
+          <div id="content5" class="tab-content">
+            {% render 'tab-content-5' %}
+          </div>
         </div>
 
       </div>
     </div>
   </div>
 </div>
+
+{% javascript %}
+document.querySelectorAll('input[name="tab"]').forEach((radio) => {
+    radio.addEventListener('change', (event) => {
+        const selectedRadioId = event.target.id;
+        const elementToChange = document.querySelector('#tabContent[data-tab]');
+        if (elementToChange) {
+            elementToChange.setAttribute('data-tab', selectedRadioId);
+        }
+    });
+});
+{% endjavascript %}
 
 {% schema %}
 {
