--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -334,11 +334,14 @@
 .image-with-text__text p {
   margin-top: 0;
   margin-bottom: 1rem;
+  font-family: Open Sans, sans-serif;
+  line-height: normal;
+    letter-spacing: normal;
 }
 
 @media screen and (max-width: 749px) {
   .image-with-text__heading {
-    font-size: 1.8rem;
+    font-size: 2.2rem;
   }
   .collapse-padding .image-with-text__grid .image-with-text__content {
     padding-left: 0;
