--- a/snippets/creative-partners.liquid
+++ b/snippets/creative-partners.liquid
@@ -130,26 +130,26 @@
   <ul>
     <li>
       <a href="https://www.creatably.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" src="https://www.mpire.media/_next/static/media/creatibly-white.895e5e46.png" alt="Creatably"
-        ><img class="black-logo" src="https://www.mpire.media/_next/static/media/creatibly-black.b7dfc356.png" alt="Creatably"
+        ><img class="white-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/creatibly-white.895e5e46.png" alt="Creatably"
+        ><img class="black-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/creatibly-black.b7dfc356.png" alt="Creatably"
       ></a>
     </li>
     <li>
       <a href="https://filmlaab.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" src="https://www.mpire.media/_next/static/media/fillm-white.c8646361.png" alt="Film Laab"
-        ><img class="black-logo" src="https://www.mpire.media/_next/static/media/fillm-black.4c614b0f.png" alt="Film Laab"
+        ><img class="white-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/fillm-white.c8646361.png" alt="Film Laab"
+        ><img class="black-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/fillm-black.4c614b0f.png" alt="Film Laab"
       ></a>
     </li>
     <li>
       <a href="http://studiio.com" class="partner-link" target="_blank"
-        ><img class="white-logo" src="https://www.mpire.media/_next/static/media/studio-white.54b64add.png" alt="STUDIIO"
-        ><img class="black-logo" src="https://www.mpire.media/_next/static/media/studio-black.811beb42.png" alt="STUDIIO"
+        ><img class="white-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/studio-white.54b64add.png" alt="STUDIIO"
+        ><img class="black-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/studio-black.811beb42.png" alt="STUDIIO"
       ></a>
     </li>
     <li>
       <a href="https://sipostudios.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" src="https://www.mpire.media/_next/static/media/sipo-white.24522e14.png" alt="Sipo Studios"
-        ><img class="black-logo" src="https://www.mpire.media/_next/static/media/sipo-black.f8b74b39.png" alt="Sipo Studios"
+        ><img class="white-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/sipo-white.24522e14.png" alt="Sipo Studios"
+        ><img class="black-logo" loading="lazy" src="https://www.mpire.media/_next/static/media/sipo-black.f8b74b39.png" alt="Sipo Studios"
       ></a>
     </li>
   </ul>
