--- a/snippets/tab-content-1.liquid
+++ b/snippets/tab-content-1.liquid
@@ -19,17 +19,51 @@
   </p>
   <p>We buy ad space on the following ad platforms as needed where your brand and budget can benefit.</p>
   <ul class="platform-logos">
-    <li class="logo">{{ '15.e2ed1be9.png' | asset_url | img_tag: 'Facebook' }}</li>
-    <li class="logo">{{ '14.f0c1ec65.png' | asset_url | img_tag: 'Instagram' }}</li>
-    <li class="logo">{{ '13.c5155b64.png' | asset_url | img_tag: 'Google' }}</li>
-    <li class="logo">{{ '12.44efd562.png' | asset_url | img_tag: 'YouTube' }}</li>
-    <li class="logo">{{ '11.0dab446c.png' | asset_url | img_tag: 'TikTok' }}</li>
-    <li class="logo">{{ '10.42f0a558.png' | asset_url | img_tag: 'Pinterest' }}</li>
-    <li class="logo">{{ '9.1b1c62a7.png' | asset_url | img_tag: 'LinkedIn' }}</li>
-    <li class="logo">{{ '8.337576ce.png' | asset_url | img_tag: 'Bing' }}</li>
-    <li class="logo">{{ '7.72b6d39d.png' | asset_url | img_tag: 'SnapChat' }}</li>
-    <li class="logo">{{ '5.bbcbbc54.png' | asset_url | img_tag: 'SMS' }}</li>
-    <li class="logo">{{ '6.7ae4d556.png' | asset_url | img_tag: 'Hulu' }}</li>
+    <li class="logo">
+      
+      <img src="{{ '15.e2ed1be9.png' | asset_url }}" width="70" height="70" alt='Facebook' loading="lazy">
+      
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '14.f0c1ec65.png' | asset_url }}" width="70" height="70" alt='Instagram' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '13.c5155b64.png' | asset_url }}" width="70" height="70" alt='Google' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '12.44efd562.png' | asset_url }}" width="70" height="70" alt='YouTube' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '11.0dab446c.png' | asset_url }}" width="70" height="70" alt='TikTok' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '10.42f0a558.png' | asset_url }}" width="70" height="70" alt='Pinterest' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '9.1b1c62a7.png' | asset_url }}" width="70" height="70" alt='LinkedIn' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '8.337576ce.png' | asset_url }}" width="70" height="70" alt='Bing' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '7.72b6d39d.png' | asset_url }}" width="70" height="70" alt='SnapChat' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '5.bbcbbc54.png' | asset_url }}" width="70" height="70" alt='SMS' loading="lazy">
+    </li>
+    <li class="logo">
+      
+      <img src="{{ '6.7ae4d556.png' | asset_url }}" width="70" height="70" alt='Hulu' loading="lazy">
+    </li>
   </ul>
   <p><strong>Account Management:</strong></p>
   <ul>
