--- a/sections/custom-tabs.liquid
+++ b/sections/custom-tabs.liquid
@@ -56,6 +56,7 @@
     white-space: nowrap;
     margin: 0;
     min-width: auto;
+    text-align: center;
   }
 
   @media screen and (min-width: 750px) {
