--- a/snippets/tab-content-1.liquid
+++ b/snippets/tab-content-1.liquid
@@ -20,49 +20,48 @@
   <p>We buy ad space on the following ad platforms as needed where your brand and budget can benefit.</p>
   <ul class="platform-logos">
     <li class="logo">
-      
-      <img src="{{ '15.e2ed1be9.png' | asset_url }}" width="70" height="70" alt='Facebook' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/15.e2ed1be9.webp" width="70" height="70" alt='Facebook' loading="lazy">
       
     </li>
     <li class="logo">
       
-      <img src="{{ '14.f0c1ec65.png' | asset_url }}" width="70" height="70" alt='Instagram' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/14.f0c1ec65.webp" width="70" height="70" alt='Instagram' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '13.c5155b64.png' | asset_url }}" width="70" height="70" alt='Google' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/13.c5155b64.webp" width="70" height="70" alt='Google' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '12.44efd562.png' | asset_url }}" width="70" height="70" alt='YouTube' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/12.44efd562.webp" width="70" height="70" alt='YouTube' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '11.0dab446c.png' | asset_url }}" width="70" height="70" alt='TikTok' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/11.0dab446c.webp" width="70" height="70" alt='TikTok' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '10.42f0a558.png' | asset_url }}" width="70" height="70" alt='Pinterest' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/10.42f0a558.webp" width="70" height="70" alt='Pinterest' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '9.1b1c62a7.png' | asset_url }}" width="70" height="70" alt='LinkedIn' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/9.1b1c62a7.webp" width="70" height="70" alt='LinkedIn' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '8.337576ce.png' | asset_url }}" width="70" height="70" alt='Bing' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/8.337576ce.webp" width="70" height="70" alt='Bing' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '7.72b6d39d.png' | asset_url }}" width="70" height="70" alt='SnapChat' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/7.72b6d39d.webp" width="70" height="70" alt='SnapChat' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '5.bbcbbc54.png' | asset_url }}" width="70" height="70" alt='SMS' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/5.bbcbbc54.webp" width="70" height="70" alt='SMS' loading="lazy">
     </li>
     <li class="logo">
       
-      <img src="{{ '6.7ae4d556.png' | asset_url }}" width="70" height="70" alt='Hulu' loading="lazy">
+      <img src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/6.7ae4d556.webp" width="70" height="70" alt='Hulu' loading="lazy">
     </li>
   </ul>
   <p><strong>Account Management:</strong></p>
