--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -23,9 +23,7 @@
       {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
     </title>
 
-    {% if page_description %}
-      <meta name="description" content="{{ page_description | escape }}">
-    {% endif %}
+    <meta name="description" content="{{ page_description | default: shop.description | default: shop.name }}">
 
     {% render 'meta-tags' %}
 
