--- a/assets/component-accordion.css
+++ b/assets/component-accordion.css
@@ -25,8 +25,8 @@
   margin-bottom: 2rem;
   border-top: 0.1rem solid rgba(var(--color-foreground), 0.08);
   border-bottom: 0.1rem solid rgba(var(--color-foreground), 0.08);
-  border: 1.5px solid #fff !important;
-  background-color: #121212 !important;
+  border: 0.5px solid #cccccc !important;
+  background-color: #1e1e1e !important;
   border-radius: 10px !important;
   padding: 1.6rem;
 }
