--- a/snippets/creative-partners.liquid
+++ b/snippets/creative-partners.liquid
@@ -130,26 +130,26 @@
   <ul>
     <li>
       <a href="https://www.creatably.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-white.895e5e46.webp?width=200" alt="Creatably" width="200" height="auto"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-black.b7dfc356.webp?width=200" alt="Creatably" width="200" height="auto"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-white.895e5e46.webp?width=200" alt="Creatably" width="200" height="80"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-black.b7dfc356.webp?width=200" alt="Creatably" width="200" height="80"
       ></a>
     </li>
     <li>
       <a href="https://filmlaab.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="auto"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="auto"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="80"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="80"
       ></a>
     </li>
     <li>
       <a href="http://studiio.com" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="auto"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="auto"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="80"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="80"
       ></a>
     </li>
     <li>
       <a href="https://sipostudios.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-white.24522e14.webp?width=200" alt="Sipo Studios" width="200" height="auto"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-black.f8b74b39.webp?width=200" alt="Sipo Studios" width="200" height="auto"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-white.24522e14.webp?width=200" alt="Sipo Studios" width="200" height="80"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-black.f8b74b39.webp?width=200" alt="Sipo Studios" width="200" height="80"
       ></a>
     </li>
   </ul>
