--- a/assets/base.css
+++ b/assets/base.css
@@ -3188,7 +3188,7 @@ details-disclosure > details {
 }
 
 .font-horizon {
-  font-family: 'Horizon';
+  font-family: 'Horizon', var(--font-body-family);
 }
 
 .rounded {
