--- a/assets/component-image-with-text.css
+++ b/assets/component-image-with-text.css
@@ -106,10 +106,10 @@
 
 .image-with-text:not(.image-with-text--overlap) .image-with-text__media-item:after {
   border-radius: var(--media-radius);
-  box-shadow: var(--media-shadow-horizontal-offset)
+  /* box-shadow: var(--media-shadow-horizontal-offset)
     var(--media-shadow-vertical-offset)
     var(--media-shadow-blur-radius)
-    rgba(var(--color-shadow), var(--media-shadow-opacity));
+    rgba(var(--color-shadow), var(--media-shadow-opacity)); */
 }
 
 .image-with-text:not(.image-with-text--overlap) .image-with-text__text-item:after {
