--- a/snippets/creative-partners.liquid
+++ b/snippets/creative-partners.liquid
@@ -63,6 +63,7 @@
 .creative-partners img {
   width: 100%;
   padding: 10px;
+  height: auto;
 }
 
 .creative-partners ul li a .white-logo, .creative-partners ul li:hover .black-logo {
@@ -136,14 +137,14 @@
     </li>
     <li>
       <a href="https://filmlaab.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="80"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="80"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="29"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="29"
       ></a>
     </li>
     <li>
       <a href="http://studiio.com" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="80"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="80"
+        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="200"
+        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="200"
       ></a>
     </li>
     <li>
