--- a/sections/partners-section.liquid
+++ b/sections/partners-section.liquid
@@ -23,11 +23,11 @@
     <div class="font-horizon">
       <ol>
         <li>Meet Us</li>
-        <li>Follow up with a questionaire</li>
-        <li>Request Access to your existing advertising platforms</li>
-        <li>Send over agreement / contract to sign and kickoff our relationship</li>
-        <li>Establish Communication Preference and Expectations</li>
-        <li>Discuss groth goals</li>
+        <li>Follow up with a questionnaire</li>
+        <li>Request access to your existing advertising platforms</li>
+        <li>Send over the agreement/contract to sign and kick off our relationship</li>
+        <li>Establish communication preferences and expectations</li>
+        <li>Discuss growth goals</li>
         <li>Transition/Handoff</li>
         <li>Optimizing</li>
         <li>Scaling</li>
