--- a/snippets/creative-partners.liquid
+++ b/snippets/creative-partners.liquid
@@ -16,7 +16,7 @@
 
 .creative-partners ul li {
   list-style: none;
-  margin: 20px;
+  margin: 10px;
 }
 
 .creative-partners ul li a {
@@ -25,11 +25,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 190px;
-  height: 190px;
+  width: 160px;
+  height: 160px;
   background: #ccc;
   text-align: left;
-  padding-left: 20px;
+  padding-left: 0;
   transform: rotate(0deg) skew(25deg) translate(0);
   transition: .5s;
   margin-left: 40px;
@@ -66,9 +66,9 @@
   height: auto;
 }
 
-.creative-partners ul li a .white-logo, .creative-partners ul li:hover .black-logo {
+{% comment %} .creative-partners ul li a .white-logo, .creative-partners ul li:hover .black-logo {
   display: none;
-}
+} {% endcomment %}
 
 .creative-partners img {
   width: 100%;
@@ -78,6 +78,10 @@
 .creative-partners ul li a:hover {
   transform: rotate(-5deg) skew(25deg) translate(0);
   box-shadow: -50px 50px 50px rgba(0,0,0,.5)
+}
+
+.creative-partners ul li:hover a img {
+  filter: invert(1)
 }
 
 .creative-partners ul li:hover .fa,.creative-partners ul li:hover span {
@@ -96,9 +100,9 @@
   background: #343434
 }
 
-.creative-partners ul li a .white-logo,.creative-partners ul li:hover .black-logo {
+{% comment %} .creative-partners ul li a .white-logo,.creative-partners ul li:hover .black-logo {
   display: none
-}
+} {% endcomment %}
 
 .creative-partners ul li:hover .white-logo {
   display: block
@@ -131,27 +135,45 @@
   <ul>
     <li>
       <a href="https://www.creatably.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-white.895e5e46.webp?width=200" alt="Creatably" width="200" height="80"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-black.b7dfc356.webp?width=200" alt="Creatably" width="200" height="80"
+        >
+          {% comment %} <img class="white-logo hidden" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-white.895e5e46.webp?width=200" alt="Creatably" width="200" height="80"
+        > {% endcomment %}
+          <img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/creatibly-black.b7dfc356.webp?width=200" alt="Creatably" width="200" height="80"
       ></a>
     </li>
     <li>
       <a href="https://filmlaab.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="29"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="29"
+        >
+          {% comment %} <img class="white-logo hidden" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-white.c8646361.webp?width=200" alt="Film Laab" width="200" height="29"
+        > {% endcomment %}
+          <img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/fillm-black.4c614b0f.webp?width=200" alt="Film Laab" width="200" height="29"
       ></a>
     </li>
     <li>
       <a href="http://studiio.com" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="200"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="200"
+        >
+          {% comment %} <img class="white-logo hidden" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-white.54b64add.webp?width=200" alt="STUDIIO" width="200" height="200"
+        > {% endcomment %}
+          <img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/studio-black.811beb42.webp?width=200" alt="STUDIIO" width="200" height="200"
       ></a>
     </li>
     <li>
       <a href="https://sipostudios.com/" class="partner-link" target="_blank"
-        ><img class="white-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-white.24522e14.webp?width=200" alt="Sipo Studios" width="200" height="80"
-        ><img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-black.f8b74b39.webp?width=200" alt="Sipo Studios" width="200" height="80"
+        >
+          {% comment %} <img class="white-logo hidden" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-white.24522e14.webp?width=200" alt="Sipo Studios" width="200" height="80"
+        > {% endcomment %}
+          <img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/sipo-black.f8b74b39.webp?width=200" alt="Sipo Studios" width="200" height="80"
+      ></a>
+    </li>
+    <li>
+      <a href="https://contentkitchenstudio.com/" class="partner-link" target="_blank"
+        >
+          {% comment %} <img class="white-logo hidden" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/CK_Blk_text_Logo.png?v=1721895586" alt="Content Kitchen Studio" width="200" height="80"
+        > {% endcomment %}
+          <img class="black-logo" loading="lazy" src="https://cdn.shopify.com/s/files/1/0741/9350/2504/files/CK_Blk_text_Logo.png?v=1721895586" alt="Content Kitchen Studio" width="200" height="80"
       ></a>
     </li>
   </ul>
+
+  
 </section>
