--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -16,7 +16,11 @@
 
 <div class="page-width page-width--narrow section-{{ section.id }}-padding">
   <h1 class="main-page-title page-title h1 text-center">
-    {{ page.title | escape }}
+    {% if section.settings.custom_heading != blank %}
+      {{ section.settings.custom_heading | escape }}
+    {% else %}
+      {{ page.title | escape }}
+    {% endif %}
   </h1>
   <div class="rte">
     {{ page.content }}
@@ -31,13 +35,22 @@
   "settings": [
     {
       "type": "header",
+      "content": "Custom Heading"
+    },
+    {
+      "type": "text",
+      "id": "custom_heading",
+      "label": "Custom Heading"
+    },
+    {
+      "type": "header",
       "content": "t:sections.all.padding.section_padding_heading"
     },
     {
       "type": "range",
       "id": "padding_top",
       "min": 0,
-      "max": 100,
+      "max": 200,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_top",
@@ -47,7 +60,7 @@
       "type": "range",
       "id": "padding_bottom",
       "min": 0,
-      "max": 100,
+      "max": 200,
       "step": 4,
       "unit": "px",
       "label": "t:sections.all.padding.padding_bottom",
