--- a/sections/main-page.liquid
+++ b/sections/main-page.liquid
@@ -14,7 +14,7 @@
   }
 {%- endstyle -%}
 
-<div class="page-width page-width--narrow section-{{ section.id }}-padding">
+<div class="page-width {% if section.settings.page_narrow %}page-width--narrow{% endif %} section-{{ section.id }}-padding">
   <h1 class="main-page-title page-title h1 text-center">
     {% if section.settings.custom_heading != blank %}
       {{ section.settings.custom_heading | escape }}
@@ -33,6 +33,16 @@
   "tag": "section",
   "class": "section",
   "settings": [
+    {
+      "type": "header",
+      "content": "Page Width"
+    },
+    {
+      "type": "checkbox",
+      "id": "page_narrow",
+      "default": true,
+      "label": "Narrow"
+    },
     {
       "type": "header",
       "content": "Custom Heading"
