--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -151,10 +151,9 @@
         </label>
       </div>
 
-     
+      <div class="contact__button" style="margin-top: 0; font-size: 12px;">
+        <p>By submitting you agree to receive SMS or e-mails from Mpire Media, LLC. Incoming message rates may be applied. Reply STOP to opt out.</p>
 
-
-      <div class="contact__button">
         <button type="submit" class="button">
           {{ 'templates.contact.form.send' | t }}
         </button>
