--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -153,7 +153,7 @@
 
       <div class="contact__button" style="margin-top: 0; font-size: 12px;">
 
-        {{ section.settings.form_consent }}
+        <div>{{ section.settings.form_consent }}</div>
 
         <button type="submit" class="button">
           {{ 'templates.contact.form.send' | t }}
