--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -155,7 +155,7 @@
 
         <div>{{ section.settings.form_consent }}</div>
 
-        <button type="submit" class="button">
+        <button type="submit" class="button" style="    margin-top: 10px;">
           {{ 'templates.contact.form.send' | t }}
         </button>
       </div>
