--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -153,7 +153,11 @@
 
       <div class="contact__button" style="margin-top: 0; font-size: 12px;">
 
-        <div>{{ section.settings.form_consent }}</div>
+        <div>
+          <p>
+            {{ section.settings.form_consent }}
+          </p>
+        </div>
 
         <button type="submit" class="button" style="    margin-top: 10px;">
           {{ 'templates.contact.form.send' | t }}
