--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -159,7 +159,7 @@
           </p>
         </div>
 
-        <button type="submit" class="button" style="    margin-top: 10px;">
+        <button type="submit" class="button">
           {{ 'templates.contact.form.send' | t }}
         </button>
       </div>
